stylesheets/main.css
body {
    background-color: #63e3f1;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

h1 {
    padding-top: 10px;
    margin-bottom: 5px;
    text-align: center;
    color: white;
    font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif;

}

.subtitle {
    padding-bottom: 20px;
    text-align: center;
    color: white;
    font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif;
}

@media (min-width: 500px) {
    h1 {
        padding-top: 20px;
        padding-left: 80px;
        margin-bottom: 5px;
        text-align: left;
    }

    .subtitle {
        padding-bottom: 20px;
        padding-left: 80px;
        padding-top: 0;
        font-size: 1.5em;
        font-weight: bold;
        text-align: left;
    }
}

.frame-wrapper {
    border-top: 3px solid white;
    border-bottom: 3px solid white;
    text-align: center;
    padding: 50px 0;
}

#frame video {
    max-width: 90%;
    min-height: 300px;
    display: inline-block;
}

@media (min-width: 500px) {
    #frame video {
        min-height: 400px;
    }
}

.next-button-wrapper {
    padding-top: 50px;
    text-align: center;
}

.next-button {
    border: 3px solid white;
    padding: 20px;
    background: #63e3f1;
    font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif;
    font-size: 20px;
    font-weight: 600;
    color: white;
    width: 200px;
    cursor: pointer;
}

.next-button:hover {
    border: 3px solid #63e3f1;
    background: white;
    color: #63e3f1
}

